# vue-python-graphql

./: README.md
backend/: .config  .gitignore  main.py  pyproject.toml
backend/app/: config.py  models.py  root.py  schemas.py  utils.py
backend/app/gpl/: contexts.py  mutations.py  queries.py  subscriptions.py
frontend/: .gitignore  package.json  tailwind.config.mjs  tsconfig.json  vite.config.ts  windi.config.ts
frontend/src/: App.vue  env.d.ts  index.css  main.ts
frontend/src/assets/css/: aggrid.css
frontend/src/components/charts/bar/: ApexBarDataLabelChart.vue
frontend/src/components/charts/candlestick/: ApexCandleStickChart.vue
frontend/src/components/charts/radial/: ApexRadialChart.vue
frontend/src/components/charts/treemap/: ApexTreemapChart.vue
frontend/src/components/grid/: GridSample.vue
frontend/src/components/layout/common/: Footer.vue  Header.vue  Loading.vue  Sidebar.vue
frontend/src/components/layout/widget/: WidgetTitle.vue
frontend/src/components/modal/: Modal.vue
frontend/src/components/template/: DefaultTemplate.vue
frontend/src/components/widgets/: DefaultWidget.vue
frontend/src/router/: index.ts
frontend/src/store/: layout.ts
frontend/src/utils/: auth-util.ts  comm-util.ts
frontend/src/views/: About.vue  Home.vue  Login.vue  NotFound.vue  Subscription.vue
